@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\"
-'\" RCS: @(#) $Id: ooInfo.n,v 1.9 2009/05/15 10:14:54 dkf Exp $
+'\" RCS: @(#) $Id: ooInfo.n,v 1.10 2010/03/24 11:51:50 dkf Exp $
 '\"
 .so man.macros
 .TH ooInfo n 0.1 TclOO "TclOO Commands"
@@ -107,6 +107,14 @@ the private (i.e. non-exported) methods of the object (and classes, if
 \fB\-all\fR is also given).
 .RE
 .TP
+\fBinfo object methodtype\fI object method\fR
+.
+This subcommand returns a description of the type of implementation used for
+the method named \fImethod\fR of object \fIobject\fR. When the result is
+\fBmethod\fR, further information can be discovered with \fBinfo object
+definition\fR, and when the result is \fBforward\fR, further information can
+be discovered with \fBinfo object forward\fR.
+.TP
 \fBinfo object mixins\fI object\fR
 .
 This subcommand returns a list of all classes that have been mixed into the
@@ -191,6 +199,14 @@ If the \fB\-private\fR flag is given, the list of methods will also include
 the private (i.e. non-exported) methods of the class (and superclasses and
 mixins, if \fB\-all\fR is also given).
 .RE
+.TP
+\fBinfo class methodtype\fI class method\fR
+.
+This subcommand returns a description of the type of implementation used for
+the method named \fImethod\fR of class \fIclass\fR. When the result is
+\fBmethod\fR, further information can be discovered with \fBinfo class
+definition\fR, and when the result is \fBforward\fR, further information can
+be discovered with \fBinfo class forward\fR.
 .TP
 \fBinfo class mixins\fI class\fR
 .
