@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclOOMethod.c,v 1.31 2010/03/08 09:38:40 dkf Exp $
+ * RCS: @(#) $Id: tclOOMethod.c,v 1.32 2010/03/24 11:51:50 dkf Exp $
  */
 
 #ifdef HAVE_CONFIG_H
@@ -103,7 +103,7 @@ static int		ProcedureMethodCompiledVarResolver(Tcl_Interp *interp,
  */
 
 static const Tcl_MethodType procMethodType = {
-    TCL_OO_METHOD_VERSION_CURRENT, "procedural method",
+    TCL_OO_METHOD_VERSION_CURRENT, "method",
     InvokeProcedureMethod, DeleteProcedureMethod, CloneProcedureMethod
 };
 static const Tcl_MethodType fwdMethodType = {
